# hortus

./: .gitignore  CLAUDE.md  Dockerfile.build  build-docker.sh  deploy.sh  start.sh
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml
backend/data/: species.json
backend/src/: db.rs  journal.rs  lib.rs  main.rs  problems.rs
backend/src/api/: mod.rs  routes.rs  snapshot.rs  state.rs
backend/src/domain/: catalog.rs  garden.rs  geo.rs  household.rs  mod.rs  nutrition.rs  pantry.rs  plant.rs  sim.rs  soil.rs  species.rs  time.rs  weather.rs  weather_live.rs
backend/tests/: year_simulation.rs
frontend/: elm.json  package-lock.json  package.json
frontend/src/: Main.elm
frontend/static/: index.html  style.css
